--- a/m/musl/package.xml
+++ b/m/musl/package.xml
@@ -22,17 +22,16 @@
         </description>
 
         <sources>
-            <file src="musl-1.1.18.tar.gz" subdir="sources"
-                sha256sum="d017ee5d01aec0c522a1330fdff06b1e428cb409e1db819cc4935d5da4a5a118"/>
-            <file src="bolt.2.tar.gz" subdir="patches"
-                sha256sum="4cbc02b7b89dcb343a09115d27094c8cb3f001e983f4c1314c2f709482c2a8e3"/>
+            <file src="musl-1.1.23.tar.gz" subdir="sources"
+                sha256sum="8a0feb41cef26c97dde382c014e68b9bb335c094bbc1356f6edaaf6b79bd14aa"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="616084db2eae78cd1be935c930fb748e209324d9a55e64f299d828f89a5f9680"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <file src="patches/musl-cdefs.patch"/>
-                <file src="patches/200-add_libssp_nonshared.patch"/>
-                <file src="patches/fix-crash-double-libc-load.patch"/>
+                <file src="patches/add-libssp-nonshared.patch"/>
             </patchset>
         </patches>
 
