--- a/a/audit/package.xml
+++ b/a/audit/package.xml
@@ -15,19 +15,23 @@
         </description>
 
         <sources>
-            <file src="audit-2.6.7.tar.gz" subdir="sources"
-                sha256sum="8923917332daa7833bbc0c1d9eb012167093fbad000da4a9630fb3356aff8cdc"/>
-            <file src="patches.01.tar.gz" subdir="patches"
-                sha256sum="3239dd345d7523bd9c1b071ed715bfdeb78f9e3769b080b7e40287593e849c91"/>
-            <file src="patches.bolt.tar.gz" subdir="patches"
-                sha256sum="308f2e51f8f4aa44c3218bdd68a99e557dfcee5521dcdc60a1825767b087bc3f"/>
+            <file src="audit-2.8.4.tar.gz" subdir="sources"
+                sha256sum="a410694d09fc5708d980a61a5abcb9633a591364f1ecc7e97ad5daef9c898c38"/>
+            <file src="debian-patches-3.tar.gz" subdir="patches"
+                sha256sum="a62eee6011b0a8f5d92b7e78a0a9a1ed7d7e3d9e3db2529b2eaa16c4c8016adf"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="0d6547118c3bdcd896dbbbfc21371db1d2dfeacde6b39fd2bd85944186bd7632"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
                 <file src="patches/01-no-refusemanualstop.patch"/>
                 <file src="patches/02-restorecon-path.patch"/>
+                <file src="patches/03-Set-log_group-adm.patch"/>
+                <file src="patches/04-fix_ftbfs_tests.patch"/>
+                <file src="patches/05-use_bin_sh.patch"/>
+                <file src="patches/06-do_not_hardcode_stdint_path.patch"/>
                 <!-- Bolt -->
                 <file src="patches/musl-libc-compat.patch"/>
             </patchset>
