--- a/g/gcc/8/package.xml
+++ b/g/gcc/8/package.xml
@@ -32,10 +32,13 @@
                 sha256sum="f0cae581373cd7da7771a503e22b55d2833490cdb29e064a302cf3212f7f2ac4"/>
             <file src="debian-patches-6.tar.gz" subdir="patches"
                 sha256sum="d252e89bde13036f2286ab6660df73bc6e58eb61e91f699492c4999a1f6ea012"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="8cfa09c05f63a9db542cec1a9f0c182e80ae8c6ae7c81e9f8b588bcc4788303f"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/svn-updates.diff"/>
                 <file src="patches/gcc-gfdl-build.diff"/>
                 <file src="patches/gcc-textdomain.diff"/>
@@ -127,6 +130,8 @@
                 <!--
                 <file src="patches/ada-changes-in-autogen-output.diff"/>
                 -->
+                <!-- Bolt OS -->
+                <file src="patches/230-musl_libssp.patch"/>
             </patchset>
         </patches>
 
