--- a/p/pam/package.xml
+++ b/p/pam/package.xml
@@ -18,21 +18,22 @@
         </description>
 
         <sources>
-            <file src="pam-1.1.8.tar.gz" subdir="sources"
-                sha256sum="4183409a450708a976eca5af561dbf4f0490141a08e86e4a1e649c7c1b094876"/>
+            <file src="pam-1.3.1.tar.xz" subdir="sources"
+                sha256sum="eff47a4ecd833fbf18de9686632a70ee8d0794b79aecb217ebd0ce11db4cd0db"/>
+            <file src="debian-patches-5.tar.gz" subdir="patches"
+                sha256sum="b282c02574aff974c2107bbca9ea3caceb1080c04617bcda3ea42829fa6b58e5"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="d60d4bfa7718a49b49086b817966a43d8ace0313c0790cf18ce6e721681a2fa8"/>
             <file src="pam-etc.tar.gz" subdir="extra"
                 sha256sum="9962c128162a72ea4432f2ec7927bfbe34414041283927ebb62204f2b7e66293"/>
-            <file src="patches.3.5.tar.gz" subdir="patches"
-                sha256sum="1f5192fc1a8c8f9c3af46878081033d54902e9637c3da61108d3a40a198abe15"/>
-            <file src="patches.bolt.tar.gz" subdir="patches"
-                sha256sum="d60d4bfa7718a49b49086b817966a43d8ace0313c0790cf18ce6e721681a2fa8"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
                 <file src="patches/pam_unix_fix_sgid_shadow_auth.patch"/>
                 <file src="patches/pam_unix_dont_trust_chkpwd_caller.patch"/>
+                <file src="patches/make_documentation_reproducible.patch"/>
                 <file src="patches/007_modules_pam_unix"/>
                 <file src="patches/008_modules_pam_limits_chroot"/>
                 <file src="patches/021_nis_cleanup"/>
@@ -53,18 +54,10 @@
                 <file src="patches/update-motd"/>
                 <file src="patches/no_PATH_MAX_on_hurd"/>
                 <file src="patches/lib_security_multiarch_compat"/>
-                <file src="patches/pam-loginuid-in-containers"/>
-                <file src="patches/cve-2013-7041.patch"/>
-                <file src="patches/cve-2014-2583.patch"/>
-                <file src="patches/cve-2015-3238.patch"/>
                 <file src="patches/pam-limits-nofile-fd-setsize-cap"/>
-                <file src="patches/pam_namespace_fix_bashism.patch"/>
-                <file src="patches/make_documentation_reproducible.patch"/>
+                <file src="patches/fix-autoreconf.patch"/>
                 <!-- Bolt -->
                 <file src="patches/gentoo-fix-compat.patch"/>
-                <file src="patches/gentoo-innetgr.patch"/>
-                <file src="patches/gentoo-no-strndupa.patch"/>
-                <file src="patches/handle-crypt-is-in-libc.patch"/>
                 <file src="patches/disable-mod-rhosts.patch"/>
             </patchset>
         </patches>
@@ -76,6 +69,7 @@
             <package name="libselinux1-dev"/>
             <package name="libaudit-dev"/>
             <package name="libfl-dev"/>
+            <package name="pkg-config"/>
         </requires>
 
         <xi:include href="rules.xml"/>
