--- a/f/libffi/package.xml
+++ b/f/libffi/package.xml
@@ -17,10 +17,10 @@
         <sources>
             <file src="libffi-3.2.1.tar.gz" subdir="sources"
                 sha256sum="d06ebb8e1d9a22d19e38d63fdb83954253f39bedc5d46232a05645685722ca37"/>
-            <file src="patches.06.tar.gz" subdir="patches"
-                sha256sum="35c250f5ca37da05d882bfe507b25632a1c7c23e706d6603097a9d28d01932b4"/>
+            <file src="debian-patches-9.tar.gz" subdir="patches"
+                sha256sum="45dea415360d5350db271099083b25a85f89206dbb861378c49249ee2507dac9"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/fix-alpha.diff"/>
@@ -28,12 +28,14 @@
                 <file src="patches/aarch64-fix.diff"/>
                 <file src="patches/libffi-pax.patch"/>
                 <file src="patches/libffi-race-condition.patch"/>
+                <file src="patches/mipsen-r6.diff"/>
+                <file src="patches/401.diff"/>
+                <file src="patches/libffi-3.2-riscv.patch"/>
             </patchset>
         </patches>
 
         <requires>
             <package name="libltdl-dev"/>
-            <package name="dejagnu"/>
             <package name="texinfo"/>
         </requires>
 
