--- a/t/tar/package.xml
+++ b/t/tar/package.xml
@@ -17,18 +17,24 @@
         </description>
 
         <sources>
-            <file src="tar-1.29b.tar.xz" subdir="sources"
-                sha256sum="6a59706ebee384a6cd2fb3ee1dbfbfc20c5c66c7efd7cedb28edc054fca8ba00"/>
-            <file src="patches.1.1.tar.gz" subdir="patches"
-                sha256sum="2386ffa716b8402a1cfebe22b0a23028352f181ac47ebf415b3383bb199e0fdb"/>
+            <file src="tar-1.30+dfsg.tar.xz" subdir="sources"
+                sha256sum="c02f3747ffe02017878303dde8b78e79cd220364c5e8048cf92320232e38912d"/>
+            <file src="debian-patches-6.tar.gz" subdir="patches"
+                sha256sum="8106cda82c78c2df8df22ef40759472fec4be55b6a7b369c6f39355601a58a10"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/pristine-tar.diff"/>
                 <file src="patches/listed03-linux-only"/>
                 <file src="patches/rmt.8-header-wrong"/>
-                <file src="patches/When-extracting-skip-.-members.patch"/>
+                <file src="patches/fix-for-difflink.at-failure.diff"/>
+                <file src="patches/fix-race-in-dirrem01-and-dirrem02.diff"/>
+                <file src="patches/elide-reference-to-section-5-manpage.diff"/>
+                <file src="patches/oldgnu-unknown-mode-bits.patch"/>
+                <file src="patches/zstd.patch"/>
+                <file src="patches/proper_it_translation.patch"/>
+                <file src="patches/Fix-CVE-2018-20482.patch"/>
             </patchset>
         </patches>
 
@@ -36,8 +42,6 @@
             <package name="gettext"/>
             <package name="autoconf"/>
             <package name="automake"/>
-            <package name="autopoint"/>
-            <package name="autotools-dev"/>
             <package name="libacl1-dev"/>
             <package name="libattr1-dev"/>
             <package name="libselinux1-dev"/>
