zlib: upgrade to latest version from Debian Buster

--- a/z/zlib/package.xml
+++ b/z/zlib/package.xml
@@ -10,22 +10,17 @@
         </description>
 
         <sources>
-            <file src="zlib-1.2.8.dfsg.tar.gz" subdir="sources"
-                sha256sum="2caecc2c3f1ef8b87b8f72b128a03e61c307e8c14f5ec9b422ef7914ba75cf9f"/>
-            <file src="patches.05.tar.gz" subdir="patches"
-                sha256sum="c0b4cbd0df27914c5fa2e6ddb31a76dad1108e5785ee7eec1ae6b965ac368276"/>
+            <file src="zlib-1.2.11.dfsg.tar.gz" subdir="sources"
+                sha256sum="80c481411a4fe8463aeb8270149a0e80bb9eaf7da44132b6e16f2b5af01bc899"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="480c0796cebc6997ec73508c51ee82a3ea151e57121aa9f7a59ff87a07bf4a77"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
-                <file src="patches/0001-Restore-gzflags-symbol-for-ABI-compatibility.patch"/>
                 <file src="patches/cflags-for-minizip"/>
                 <file src="patches/use-dso"/>
                 <file src="patches/use-dso-really"/>
-                <file src="patches/CVE-2016-9840"/>
-                <file src="patches/CVE-2016-9841"/>
-                <file src="patches/CVE-2016-9842"/>
-                <file src="patches/CVE-2016-9843"/>
             </patchset>
         </patches>
 
