--- a/k/libksba/package.xml
+++ b/k/libksba/package.xml
@@ -21,10 +21,10 @@
         <sources>
             <file src="libksba-1.3.5.tar.bz2" subdir="sources"
                 sha256sum="41444fd7a6ff73a79ad9728f985e71c9ba8cd3e5e53358e70d5f066d35c1a340"/>
-            <file src="patches.02.tar.gz" subdir="patches"
-                sha256sum="62b0a856e68b8aa237d8f1c37fd1d999b93b8b925626d4fd06ad0ce4847965ca"/>
+            <file src="debian-patches-2.tar.gz" subdir="patches"
+                sha256sum="ff8df6efd16e3ac3cd16ff377d2e14502fcd149d59ffb993362207091a7a86b4"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/0001-fix-win32-linker.patch"/>
